add --add-opens args for spring.core